@@ -29,6 +29,9 @@ typedef struct _is {
 #ifdef HAVE_DLOPEN
     int dlopenflags;
 #endif
+#ifdef WITH_TSC
+    int tscdump;
+#endif
 
 } PyInterpreterState;
 
